--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat!important;
+            background: url(img/about-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -48,6 +48,8 @@
 
             color: #333;
         }
+
+       
 
         @media (max-width:767px) {
             .display-3 {
@@ -68,14 +70,14 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-  <div id="header"></div>
+    <div id="header"></div>
     <!-- Navbar End -->
 
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">About Us</h1>
+            <h1 class="display-3 mb-3 animated slideInDown">About Us</h1>
 
         </div>
     </div>
