--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -34,7 +34,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
-       .page-header {
+        .page-header {
             background: url(img/about-banner.png) top center no-repeat !important;
         }
 
@@ -67,14 +67,14 @@
 
 
     <!-- Navbar Start -->
-  <div id="header"></div>
+    <div id="header"></div>
     <!-- Navbar End -->
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Cardiac Surgery</h1>
+            <h1 class="display-3 mb-3 animated slideInDown">Cardiac Surgery</h1>
 
         </div>
     </div>
@@ -185,7 +185,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png">
+                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
@@ -193,64 +193,81 @@
 
 
 
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                            </div>
+                            <div class="col-md-6">
+                                <h2>Best Cardiac Hospitals in India</h2>
+                                <p>Adam Vacations Medical is partnered with India’s top-ranked cardiac centers, such as:
+                                </p>
+                                <ul>
+                                    <li>
+                                        Medanta The Medicity (Gurgaon)
+                                    </li>
+                                    <li>
+                                        Apollo Heart Institutes (Chennai, Delhi, Hyderabad)
+                                    </li>
+                                    <li>
+                                        Fortis Escorts Heart Institute (Delhi)
+                                    </li>
+                                    <li>
+                                        Max Super Speciality Hospital (Saket, Delhi)
+                                    </li>
+                                    <li>
+                                        Narayana Institute of Cardiac Sciences (Bangalore)
+                                    </li>
+                                </ul>
+                                <p>
+                                    These hospitals are equipped with <strong>advanced cath labs, hybrid ORs, and
+                                        robotic
+                                        surgical
+                                        systems,</strong> following the <strong>latest American and European heart
+                                        surgery
+                                        protocols.</strong>
+                                </p>
+                            </div>
+
+                        </div>
+
+
+                        <div class="row mt-5">
+
+                            <div class="col-md-6">
+                                <h2>Medical Tourism Packages for Cardiac Patients</h2>
+                                <p>We offer <strong>customized cardiac treatment packages</strong> that include:</p>
+                                <ul>
+                                    <li>
+                                        Initial virtual consultation with a cardiac specialist
+                                    </li>
+                                    <li>
+                                        <strong>Second opinion service</strong> from a senior heart surgeon
+                                    </li>
+                                    <li>
+                                        Medical visa assistance & invitation letter
+                                    </li>
+                                    <li>
+                                        Airport pickup and personal patient coordinator
+                                    </li>
+                                    <li>
+                                        Hospital admission, treatment, ICU and recovery
+                                    </li>
+                                    <li>
+                                        Hotel or guesthouse stay for post-surgery recovery
+                                    </li>
+                                    <li>
+                                        Translator & local support if needed
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                            </div>
+                        </div>
 
 
 
 
-
-
-
-
-                        <h2>Best Cardiac Hospitals in India</h2>
-                        <p>Adam Vacations Medical is partnered with India’s top-ranked cardiac centers, such as:</p>
-                        <ul>
-                            <li>
-                                Medanta The Medicity (Gurgaon)
-                            </li>
-                            <li>
-                                Apollo Heart Institutes (Chennai, Delhi, Hyderabad)
-                            </li>
-                            <li>
-                                Fortis Escorts Heart Institute (Delhi)
-                            </li>
-                            <li>
-                                Max Super Speciality Hospital (Saket, Delhi)
-                            </li>
-                            <li>
-                                Narayana Institute of Cardiac Sciences (Bangalore)
-                            </li>
-                        </ul>
-                        <p>
-                            These hospitals are equipped with <strong>advanced cath labs, hybrid ORs, and robotic
-                                surgical
-                                systems,</strong> following the <strong>latest American and European heart surgery
-                                protocols.</strong>
-                        </p>
-                        <h2>Medical Tourism Packages for Cardiac Patients</h2>
-                        <p>We offer <strong>customized cardiac treatment packages</strong> that include:</p>
-                        <ul>
-                            <li>
-                                Initial virtual consultation with a cardiac specialist
-                            </li>
-                            <li>
-                                <strong>Second opinion service</strong> from a senior heart surgeon
-                            </li>
-                            <li>
-                                Medical visa assistance & invitation letter
-                            </li>
-                            <li>
-                                Airport pickup and personal patient coordinator
-                            </li>
-                            <li>
-                                Hospital admission, treatment, ICU and recovery
-                            </li>
-                            <li>
-                                Hotel or guesthouse stay for post-surgery recovery
-                            </li>
-                            <li>
-                                Translator & local support if needed
-                            </li>
-                        </ul>
                         <h2>Sample Package: Coronary Bypass Surgery (CABG)</h2>
                         <ul>
                             <li>
@@ -285,30 +302,38 @@
                             </div>
 
                         </div>
-                        <h2>How long is recovery after heart surgery?</h2>
-                        <ul>
-                            <li>
-                                Hospital Stay: 5 to 7 days
-                            </li>
-                            <li>
-                                Hotel Stay (optional): 7 to 10 days post-discharge
-                            </li>
-                            <li>
-                                Most patients can travel home in <strong>2 to 3 weeks</strong> after surgery
-                            </li>
-                        </ul>
-                        <h2>What documents are needed to travel for surgery?</h2>
-                        <ul>
-                            <li>
-                                Valid passport
-                            </li>
-                            <li>
-                                Medical reports and prescriptions
-                            </li>
-                            <li>
-                                Visa invitation letter (we provide this)
-                            </li>
-                        </ul>
+                        <div class="row mt-5">
+                            <div class="col-lg-6">
+                                <h2>How long is recovery after heart surgery?</h2>
+                                <ul>
+                                    <li>
+                                        Hospital Stay: 5 to 7 days
+                                    </li>
+                                    <li>
+                                        Hotel Stay (optional): 7 to 10 days post-discharge
+                                    </li>
+                                    <li>
+                                        Most patients can travel home in <strong>2 to 3 weeks</strong> after surgery
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6">
+                                <h2>What documents are needed to travel for surgery?</h2>
+                                <ul>
+                                    <li>
+                                        Valid passport
+                                    </li>
+                                    <li>
+                                        Medical reports and prescriptions
+                                    </li>
+                                    <li>
+                                        Visa invitation letter (we provide this)
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+
                         <h2>Can I bring a family member?</h2>
                         <p>Yes. Attendant visa, accommodation, and even hospital guest meals can be arranged.</p>
                         <h2>Start Your Heart Care Journey Today</h2>
