--- a/accommodation-service.html
+++ b/accommodation-service.html
@@ -71,7 +71,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Medical Travel Accommodation Services
+            <h1 class="display-3 mb-3 animated slideInDown">Medical Travel Accommodation Services
             </h1>
 
         </div>
