--- a/flight-booking.html
+++ b/flight-booking.html
@@ -70,7 +70,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Flight Booking Assistance for Medical Travel
+            <h1 class="display-3 mb-3 animated slideInDown">Flight Booking Assistance for Medical Travel
             </h1>
 
         </div>
