--- a/service.html
+++ b/service.html
@@ -43,6 +43,7 @@
             color: #00154c !important;
             text-align: center;
         }
+        
 
         .size-14 {
 
@@ -68,7 +69,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
+            <h1 class="display-3 mb-3 animated slideInDown">Services</h1>
 
         </div>
     </div>
@@ -78,7 +79,7 @@
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
+            <div class="mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
                 style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
                 <h1>Our Top Services
