--- a/flight-booking.html
+++ b/flight-booking.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat!important;
+            background: url(img/flight-booking.png) top center no-repeat!important;
         }
 
         .display-3 {
@@ -156,12 +156,12 @@
                                 </ul>
                             </div>
                             <div class="col-lg-6">
-                                <img src="img/air-banner-4.jpg" class="img-fluid rounded">
+                                <img src="img/flight-booking-1.png" class="img-fluid rounded">
                             </div>
                         </div>
                         <div class="row mt-5">
                             <div class="col-lg-6">
-                                <img src="img/air-banner-1.png" class="img-fluid rounded">
+                                <img src="img/flight-booking-2.png" class="img-fluid rounded">
                             </div>
                             <div class="col-lg-6">
                                 <h2>Required Details for Booking</h2>
