--- a/online-doctor-consultation.html
+++ b/online-doctor-consultation.html
@@ -35,12 +35,12 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat!important;
+            background: url(img/online-doctor-banner.png) top center no-repeat!important;
         }
 
         .display-3 {
             font-size: 2rem;
-            color: #00154c !important;
+            color: #fff !important;
             text-align: center;
         }
 
@@ -105,7 +105,7 @@
                                 <p>Get connected with a doctor within 24–48 hours of sharing your reports.</p>
                             </div>
                             <div class="col-lg-5">
-                                <img src="img/about-2.png" class="img-fluid rounded-circle">
+                                <img src="img/online-doctor-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-lg-6">
                                 <h2>Who Can Use This Service?</h2>
@@ -164,7 +164,7 @@
                                 <p>Get a written report and recommendations after your session.</p>
                             </div>
                             <div class="col-lg-6 mt-5">
-                                <img src="img/banner-home-big.png" class="img-fluid rounded">
+                                <img src="img/online-doctor-banner-2.png" class="img-fluid rounded">
 
                             </div>
                             <div class="col-lg-12">
