--- a/pre-post-arrival-services.html
+++ b/pre-post-arrival-services.html
@@ -36,7 +36,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat!important;
+            background: url(img/preandpost-arrivals-banner.png) top center no-repeat!important;
         }
 
         .display-3 {
@@ -123,7 +123,7 @@
                                     comfort.</p>
                             </div>
                             <div class="col-lg-5">
-                                <img src="img/about-1.png" class="img-fluid rounded">
+                                <img src="img/preandpost-arrivals-banner-1.png" class="img-fluid rounded">
                             </div>
                             <div class="col-lg-6">
                                 <h2>Why Book Accommodation with Adam Vacations Medical?</h2>
