--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/cardiac-surgery-page.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -185,7 +185,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/cardiac-surgery-page-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
@@ -195,7 +195,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/cardiac-surgery-page-2.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-6">
                                 <h2>Best Cardiac Hospitals in India</h2>
@@ -261,7 +261,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/cardiac-surgery-page-3.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
