--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-7 wow fadeInUp top-form" data-wow-delay="0.5s">
+            <div class="col-lg-6 wow fadeInUp top-form" data-wow-delay="0.5s">
                 <div class="rounded h-100 d-flex align-items-center p-5">
 
                     <form id="appointmentForm" class="needs-validation" novalidate>
@@ -318,8 +318,8 @@
     <!-- Feature Start -->
     <div class="container-fluid bg-primary-1 overflow-hidden px-lg-0">
         <div class="container feature px-lg-0">
-            <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="row g-0 mx-lg-0 page-set">
+                <div class="col-lg-8 feature-text wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
 
                         <h1 class="text-white-1 mb-4">WHY CHOOSE<br>
@@ -395,9 +395,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px">
+                <div class="col-lg-4 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/banner-home-big.png"
+                        <img class="position-absolute img-fluid h-100" src="img/banner-home-big.png"
                             style="object-fit: cover" alt="" />
                     </div>
                 </div>
