--- a/service.html
+++ b/service.html
@@ -79,7 +79,7 @@
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
+            <div class="mx-auto mb-5 wow fadeInUp text-center " data-wow-delay="0.1s"
                 style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
                 <h1>Our Top Services
