--- a/knee-hipreplacement.html
+++ b/knee-hipreplacement.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/knee-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -169,14 +169,14 @@
                                     Biomet, Johnson & Johnson, and Smith & Nephew.</p>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/knee-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
 
                         <div class="row mt-5">
                             <div class="col-md-5">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/knee-banner-2.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-7">
                                 <h2>Leading Knee & Hip Replacement Hospitals in India</h2>
@@ -276,7 +276,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/air-banner-3.png" class="img-fluid rounded">
+                                <img src="/img/knee-banner-3.png" class="img-fluid rounded">
                             </div>
                         </div>
 
