--- a/service.html
+++ b/service.html
@@ -280,38 +280,109 @@
                 <p class="d-inline-block border rounded-pill py-1 px-4">Testimonial</p>
                 <h1>What Say Our Patients!</h1>
             </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p> “The treatment was done by a leading Delhi hospital, but the real magic was how Adam
+                            Vacations simplified everything. They scheduled, followed up, even checked on me after I
+                            returned home.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">James M. – Los Angeles, CA</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p>“My IVF journey was handled by an incredible clinic in India. Adam Vacations arranged the
+                            whole process and stayed in touch through every step. I felt supported the entire time.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Linda R. – Buffalo, NY</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p>“I had my knee replaced by experts in India — the results were amazing. Adam Vacations helped
+                            me prepare, book, and recover with no confusion. It was smooth from start to finish.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Carlos G. – Austin, TX</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“From my first email to my flight home, Adam Vacations ensured I had the right team treating
+                            my cancer. They didn’t provide the care directly, but they made it all happen without
+                            stress.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Karen T. – Chicago, IL</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“Cardiac surgery is serious business. The hospital in India was top-class. Adam Vacations
+                            handled every logistic, document, and follow-up so I could focus on healing.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">David B. – Miami, FL</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“Dental care abroad felt risky, but with Adam Vacations, I was guided to a top clinic. They
+                            checked in before and after, ensuring everything went smoothly. I couldn’t be happier with
+                            the outcome.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Jessica W. – Phoenix, AZ</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“My spine surgery was performed by skilled doctors in India. Adam Vacations handled
+                            everything else — travel, coordination, paperwork, follow-ups. It felt like I had a support
+                            team the whole time.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Rachel S. – Seattle, WA</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“We both had cataract procedures scheduled at a premier hospital. Adam Vacations ensured a
+                            coordinated experience that felt personal and professional.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Thomas & Elaine H. – Denver, CO</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“I chose India for cosmetic surgery because of the quality and cost. Adam Vacations didn’t do
+                            the surgery, but they made sure it happened safely and efficiently.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Olivia P. – Atlanta, GA</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“A top Indian hospital gave me new hope for my liver condition. Adam Vacations organized the
+                            logistics and supported me at every turn. They truly care.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Mark L. – Newark, NJ</span>
                     </div>
                 </div>
             </div>
