--- a/bariatric-surgery.html
+++ b/bariatric-surgery.html
@@ -37,7 +37,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/bariatic-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -172,7 +172,7 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/bariatic-banner-1.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-6">
                                 <h2>Top Bariatric Hospitals in India</h2>
