--- a/cancer-treatment.html
+++ b/cancer-treatment.html
@@ -36,7 +36,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/cancer-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -171,13 +171,13 @@
 
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/cancer-banner-1.png" class="img-fluid rounded-circle">
                             </div>
 
                         </div>
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/cancer-banner-2.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-md-6">
                                 <h2>Multimodal Cancer Care in India</h2>
@@ -248,14 +248,14 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/cancer-banner-3.png" class="img-fluid rounded">
                             </div>
                         </div>
 
 
                         <div class="row mt-5">
                             <div class="col-md-4">
-                                <img src="/img/air-banner-3.png" class="img-fluid rounded">
+                                <img src="/img/cancer-banner-4.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-8">
                                 <h2>India’s Best Cancer Hospitals We Partner With</h2>
