--- a/cosmetic-surgery.html
+++ b/cosmetic-surgery.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/costematic-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -163,7 +163,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/costematic-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
                         <div class="row mt-5">
@@ -280,7 +280,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid">
+                                <img src="/img/costematic-banner-2.png" class="img-fluid">
                             </div>
                         </div>
 
@@ -346,7 +346,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/costematic-banner-3.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
