--- a/orthopedic-surgery.html
+++ b/orthopedic-surgery.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/ortho-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -173,7 +173,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/ortho-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
@@ -183,7 +183,7 @@
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/ortho-banner-2.png" class="img-fluid rounded-circle">
                             </div>
                             <div class="col-md-6">
                                 <h2>Best Orthopedic Hospitals in India</h2>
@@ -281,7 +281,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-4">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/ortho-banner-3.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
