--- a/spine-surgery.html
+++ b/spine-surgery.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat !important;
+            background: url(img/spine-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -132,14 +132,14 @@
                                     Biomet, Johnson & Johnson, and Smith & Nephew.</p>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded-circle">
+                                <img src="/img/spine-banner-1.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
 
                         <div class="row mt-5">
                             <div class="col-md-6">
-                                <img src="/img/about-1.png" class="img-fluid rounded">
+                                <img src="/img/spine-banner-2.png" class="img-fluid rounded">
                             </div>
                             <div class="col-md-6">
                                 <h2>Common Spine Surgeries Available in India</h2>
@@ -270,7 +270,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-6">
-                                <img src="/img/air-banner-3.png" class="img-fluid rounded">
+                                <img src="/img/spine-banner-3.png" class="img-fluid rounded-circle">
                             </div>
                         </div>
 
