--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Real Stories. Life-Changing Journeys.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat!important;
+            background: url(img/about-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
@@ -44,9 +44,11 @@
             text-align: center;
         }
 
-        .size-14 {
-
-            color: #333;
+        @media (max-width:767px) {
+            .display-3 {
+                font-size: 18px;
+                color: #000;
+            }
         }
     </style>
 </head>
@@ -62,60 +64,50 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Unit 16A, 16B / 17A Ground Floor, Tower B3, Spaze Itech Park, Sector 49, Gurugram, Haryana
-                        122018, India </small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3">
-                    <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+1 855 888 0114</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-0" href=""><i
-                            class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
-
-
     <!-- Navbar Start -->
-  <div id="header"></div>
+    <div id="header"></div>
     <!-- Navbar End -->
+
+
 
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Testimonial</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Testimonial</li>
-                </ol>
-            </nav>
+            <h1 class="display-3 mb-3 animated slideInDown">Testimonial</h1>
+
         </div>
     </div>
     <!-- Page Header End -->
+
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+                        <h1>Real Stories. Life-Changing Journeys.
+                        </h1>
+                        <p>
+                            How Patients from the U.S. Found Quality Healthcare in India — with Confidence and
+                            Compassion.
+                        </p>
+                        <p>
+                            At Adam Vacations, we don’t provide treatment — we connect you with India’s top-rated
+                            hospitals and specialists. From the moment you reach out, our team works closely with
+                            accredited medical centers to make your healthcare journey seamless, affordable, and safe.
+                            <br><br>
+                            While the treatment is handled by world-class hospitals, our role is to ensure that every
+                            other part of your experience — from pre-travel planning to post-treatment follow-up — is
+                            stress-free and supportive.
+                            <br><br>
+                            Here are real stories from patients who chose Adam Vacations to guide their path to better
+                            health.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Testimonial Start -->
@@ -123,49 +115,145 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Testimonial</p>
-                <h1>What Say Our Patients!</h1>
+                <h1>Real Stories. Life-Changing Journeys.</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p> “The treatment was done by a leading Delhi hospital, but the real magic was how Adam
+                            Vacations simplified everything. They scheduled, followed up, even checked on me after I
+                            returned home.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">James M. – Los Angeles, CA</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p>“My IVF journey was handled by an incredible clinic in India. Adam Vacations arranged the
+                            whole process and stayed in touch through every step. I felt supported the entire time.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Linda R. – Buffalo, NY</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg"
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
                         style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna
-                            ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea
-                            clita.</p>
+                        <p>“I had my knee replaced by experts in India — the results were amazing. Adam Vacations helped
+                            me prepare, book, and recover with no confusion. It was smooth from start to finish.”</p>
                         <h5 class="mb-1">Patient Name</h5>
-                        <span class="fst-italic">Profession</span>
+                        <span class="fst-italic">Carlos G. – Austin, TX</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“From my first email to my flight home, Adam Vacations ensured I had the right team treating
+                            my cancer. They didn’t provide the care directly, but they made it all happen without
+                            stress.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Karen T. – Chicago, IL</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“Cardiac surgery is serious business. The hospital in India was top-class. Adam Vacations
+                            handled every logistic, document, and follow-up so I could focus on healing.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">David B. – Miami, FL</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“Dental care abroad felt risky, but with Adam Vacations, I was guided to a top clinic. They
+                            checked in before and after, ensuring everything went smoothly. I couldn’t be happier with
+                            the outcome.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Jessica W. – Phoenix, AZ</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“My spine surgery was performed by skilled doctors in India. Adam Vacations handled
+                            everything else — travel, coordination, paperwork, follow-ups. It felt like I had a support
+                            team the whole time.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Rachel S. – Seattle, WA</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“We both had cataract procedures scheduled at a premier hospital. Adam Vacations ensured a
+                            coordinated experience that felt personal and professional.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Thomas & Elaine H. – Denver, CO</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“I chose India for cosmetic surgery because of the quality and cost. Adam Vacations didn’t do
+                            the surgery, but they made sure it happened safely and efficiently.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Olivia P. – Atlanta, GA</span>
+                    </div>
+                </div>
+                <div class="testimonial-item text-center">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial.png"
+                        style="width: 100px; height: 100px;">
+                    <div class="testimonial-text rounded text-center p-4">
+                        <p>“A top Indian hospital gave me new hope for my liver condition. Adam Vacations organized the
+                            logistics and supported me at every turn. They truly care.”</p>
+                        <h5 class="mb-1">Patient Name</h5>
+                        <span class="fst-italic">Mark L. – Newark, NJ</span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Testimonial End -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+                        <ul>
+                            <li>
+                                World-Class Hospitals
+                            </li>
+                            <li>
+                                U.S.-Patient Friendly Coordination
+                            </li>
+                            <li>
+                                End-to-End Guidance by Adam Vacations
+                            </li>
+                        </ul>
+                              <h2>Ready to explore your treatment options in India?</h2>
+                        <ul>
+                            <li>Email: medical@adamvacations.com</li>
+                            <li>USA Toll-Free: +1 855 888 0114</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-   <!-- Footer Start -->
+    <!-- Footer Start -->
     <div id="footer"></div>
     <!-- Footer End -->
 
