--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Bringing Expert Indian Medical Advice to Your Home – Anywhere in the World
+        Medical Adam Vacations
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
