--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
   <!-- Page Header End -->
 
   <!-- Contact Start -->
-  <div class="container-xxl py-5">
+  <div class="container-xxl py-5 size-all">
     <div class="container">
       <div class="row g-4">
         <div class="col-lg-4">
